# ecto-trigger

./: README.md  callbacks.py  dconfig  eval_bins.py  generator.py  header.tex  model.py  model_evaluator.py  model_loader.py  model_quantiser.py  model_trainer.py  requirements.txt  saliency_map_evaluator.py  salmap_eval.py  test.py  tflite_model_runner.py
docs/: CNAME
guides/: about.md  deployment.md  faqs.md  introduction.md  packages.md  usage.md
guides/esp32s3/: CMakeLists.txt  app_camera_esp.h  main_functions.cc
html/: README_8md.html  about_8md.html  annotated.html  annotated_dup.js  callbacks_8py.html  callbacks_8py.js  classcallbacks_1_1SaveWeightsCallback-members.html  classcallbacks_1_1SaveWeightsCallback.html  classcallbacks_1_1SaveWeightsCallback.js  classcallbacks_1_1SaveWeightsCallback__coll__graph.md5  classcallbacks_1_1SaveWeightsCallback__inherit__graph.map  classcallbacks_1_1SaveWeightsCallback_a88d7678ee11d1acdff68b94e0da31dbf_cgraph.map  classcallbacks_1_1SaveWeightsCallback_a88d7678ee11d1acdff68b94e0da31dbf_cgraph.md5  classcallbacks_1_1SaveWeightsCallback_a88d7678ee11d1acdff68b94e0da31dbf_icgraph.map  classcallbacks_1_1SaveWeightsCallback_a88d7678ee11d1acdff68b94e0da31dbf_icgraph.md5  classes.html  classgenerator_1_1CustomDataGenerator-members.html  classgenerator_1_1CustomDataGenerator.html  classgenerator_1_1CustomDataGenerator.js  classgenerator_1_1CustomDataGenerator__coll__graph.md5  classgenerator_1_1CustomDataGenerator__inherit__graph.map  classgenerator_1_1CustomDataGenerator_a003deef9782f3228c318bcbdebc0f3fb_cgraph.map  (+203 more)
(+159 files in other folders)
